2007-03-02  Ray Strode  <rstrode@redhat.com>

	* configure.in: Post release bump

============================= 2.18.0 ======================

2007-03-02  Ray Strode  <rstrode@redhat.com>

	* configure.in: bump release number

	* NEWS: update for release

	* README: remove mention of popt and 
	add mention of evoldap and older libxml backend

2007-03-02  Christian Persch  <chpe@svn.gnome.org>

	* gconf/gconf.c: (utf8_make_valid), (gconf_key_check),
	(gconf_valid_key): Make sure error strings are UTF-8. Bug #406251.

2007-03-02  Kjartan Maraas  <kmaraas@gnome.org>

	* backends/xml-dir.c: Don't include xml-entry.h twice.

2007-03-02  Ray Strode  <rstrode@redhat.com>

	* gconf/gconf-value.c (gconf_meta_info_free):
	free schema and mod_user fields before freeing
	struct.  Based on patch by 
	Richard Hult <richard@imendio.com>

2007-03-02  Ray Strode  <rstrode@redhat.com>

	* configure.in:
	* gconf/gconf.c:
	drop as much of the legacy popt stuff as we can,
	while remaining compatible (bug 396071). Based on
	patch from Chris Wilson <chris@chris-wilson.co.uk>

2007-03-02  Ray Strode  <rstrode@redhat.com>

	Patch from
	Laszlo (Laca) Peter <laszlo.peter@sun.com>

	* gconf/gconftool.c (do_makefile_install):
	don't bail on first error when multiple schemas are 
	installed in one go (bug 385142).

2007-03-02  Ray Strode  <rstrode@redhat.com>

	Patch from
	Padraig O'Briain <padraig.obriain@sun.com>

	* configure.in:
	* gconf/gconf-internals.c (close_fd_func):
	use fdwalk() to only close open file descriptors
	if available (bug 357206)

2007-03-02  Ray Strode  <rstrode@redhat.com>

	Patch from 
	Paolo Borelli <pborelli@katamail.com>

	* backends/markup-tree.c:
	* backends/xml-dir.c:
	* doc/gconf/gconf-sections.txt:
	* doc/gconf/tmpl/gconf-internals.sgml:
	* gconf/gconf-backend.c:
	* gconf/gconf-internals.[ch]:
	* gconf/gconfd.c:
	use g_file_test instead of home brew gconf_file_test 
	and gconf_file_exists functions (bug 341828)

2007-03-02  Ray Strode  <rstrode@redhat.com>
